[tool.poetry]
name = "fisheye-camera"
version = "0.1.0"
description = ""
authors = ["kmlll4 <develop@kmworks-lll4.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
